--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>User Manual Document for DFC BMS | Dubai Fitness Challenge</title>
+    <title>Booking System User Guide | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -35,8 +35,16 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Social Platforms</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Company</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link">Company</a>
+                            <ul class="sub-menu">
+                                <li class="sub-menu-item">
+                                    <a href="#genral-admin-topics" class="sub-menu-link">Facility Admin User Guide</a>
+                                </li>
+                                <li class="sub-menu-item">
+                                    <a href="#hq-admin-guide" class="sub-menu-link">HQ Admin User guide</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
@@ -75,9 +83,7 @@
                 <div class="container">
                     <div class="hero-content-box">
                         <div class="hero-title-box">
-                            <h3 class="hero-title">Create your
-                                30X30
-                                Challenge</h3>
+                            <h3 class="hero-title">Booking System User Guide</h3>
                         </div>
                         <div class="hero-img-box">
                             <div class="hero-img-box">
@@ -87,7 +93,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <!-- Genral Admin Topics -->
             <section id="genral-admin-topics">
                 <div class="container">
