--- a/facility-admin.html
+++ b/facility-admin.html
@@ -85,7 +85,7 @@
                 <div class="container">
                     <div class="hero-content-box">
                         <div class="hero-title-box">
-                            <h3 class="hero-title">Booking System User Guide</h3>
+                            <h3 class="hero-title">Facility Admin User Guide</h3>
                         </div>
                         <div class="hero-img-box">
                             <div class="hero-img-box">
