--- a/post-detail.html
+++ b/post-detail.html
@@ -24,19 +24,29 @@
                 <nav class="navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About Us</a>
+                            <a href="https://www.dubaifitnesschallenge.com/about-us/" class="nav-link" target="_blank">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Terms & Conditions</a>
+                            <a href="https://www.dubaifitnesschallenge.com/terms-conditions/" class="nav-link" target="_blank">Terms & Conditions</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Privacy Policy</a>
+                            <a href="https://www.dubaifitnesschallenge.com/privacy-policy/" class="nav-link" target="_blank">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Social Platforms</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Company</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link">Company 
+                                <img src="./images/icon/arrow-down.png" alt="">
+                            </a>
+                            <ul class="sub-menu">
+                                <li class="sub-menu-item">
+                                    <a href="./facility-admin.html" class="sub-menu-link">Facility Admin User Guide</a>
+                                </li>
+                                <li class="sub-menu-item">
+                                    <a href="./hq-admin.html" class="sub-menu-link">HQ Admin User guide</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
@@ -83,7 +93,7 @@
                             <div class="aside-inner-box">
                                 <ul class="aside-nav">
                                     <li class="aside-item">
-                                        <a href="#section1" class="aside-link">General Admin</a>
+                                        <a href="#section1" class="aside-link active">General Admin</a>
                                         <ul class="aside-subnav-list">
                                             <li class="aside-subnav-item">
                                                 <a href="#sub-section1" class="aside-subnav-link">Logging in</a>
@@ -268,7 +278,7 @@
                             <a href="#">Home</a>
                         </li>
                         <li class="">
-                            <a href="https://www.dubaifitnesschallenge.com/about-us/">About Us</a>
+                            <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
                         </li>
                         <li class="">
                             <a href="#">Contact Us</a>
@@ -293,13 +303,13 @@
                             <a href="#">FAQ</a>
                         </li>
                         <li class="">
-                            <a href="#">Privacy Policy</a>
+                            <a href="https://www.dubaifitnesschallenge.com/privacy-policy/" target="_blank">Privacy Policy</a>
                         </li>
                         <li class="">
-                            <a href="#">Terms & Conditions</a>
+                            <a href="https://www.dubaifitnesschallenge.com/terms-conditions/" target="_blank">Terms & Conditions</a>
                         </li>
                         <li class="">
-                            <a href="#">Cookie Policy</a>
+                            <a href="https://www.dubaifitnesschallenge.com/cookie-policy/" target="_blank">Cookie Policy</a>
                         </li>
                     </ul>
                 </div>
