--- a/facility-admin.html
+++ b/facility-admin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>Booking System User Guide | Dubai Fitness Challenge</title>
+    <title>Genral Admin Guide | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -14,7 +14,7 @@
     <div class="wrapper">
 
         <!-- header -->
-        <header id="header">
+        <header id="header" class="">
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
@@ -155,84 +155,6 @@
                     </div>
                 </div>
             </section>
-            
-            <!-- Genral Admin Topics -->
-            <section id="hq-admin-guide">
-                <div class="container">
-                    <div class="section-header">
-                        <p class="section-title">HQ Admin Guides</p>
-                        <p class="section-desc">We got you covered with all your problems.</p>
-                        <p class="section-desc">Please navigate through the below links to get your answers.</p>
-                    </div>
-                    <div class="section-body">
-                        <div class="card-box">
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">HQ Admin Guides</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Reporting</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Updating a facility profile</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Check In App Guides</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Scheduling Classes</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Settings</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Users</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </main>
 
         <!-- footer -->
@@ -293,6 +215,17 @@
 
     <script src="./lib/jquery/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <script>
+        $(window).scroll(function () {
+            var $this = $(this),
+                $head = $('#header');
+            if ($this.scrollTop() > 120) {
+                $head.addClass('fixed_header');
+            } else {
+                $head.removeClass('fixed_header');
+            }
+        });
+    </script>
 </body>
 
 </html>
