--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>Booking System User Guide | Dubai Fitness Challenge</title>
+    <title>User Guide | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -93,34 +93,25 @@
                             </div>
                         </div>
                     </div>
+                    <p class="hero-desc">Want to get started with fitness challenge, but don’t know where to begin? The articles will help you start your booking activities from sign up to check-in to class</p>
                 </div>
             </section>
 
-            <!-- Genral Admin Topics -->
-            <section id="genral-admin-topics">
+            <!-- User Manual Topics -->
+            <section id="user-manual-topics">
                 <div class="container">
                     <div class="section-header">
-                        <p class="section-title">Genral Admin Topics</p>
-                        <p class="section-desc">We got you covered with all your problems.</p>
-                        <p class="section-desc">Please navigate through the below links to get your answers.</p>
+                        <p class="section-title">Have Questions?</p>
+                        <p class="section-desc">We got you covered with all your problems. Please navigate through the below links to get your anser our Live chat with our Help center representative.</p>
                     </div>
                     <div class="section-body">
                         <div class="card-box">
                             <a href="./post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Getting Started with Backend Facility Guides</p>
-                                    <p class="card-desc">Want to get started with creating an activity, but don’t know where to begin? </p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">General Admin</p>
+                                    <p class="card-title">Getting Started</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -129,7 +120,7 @@
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Updating Your Facility Profile</p>
+                                    <p class="card-title">Booking Activity</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -138,7 +129,7 @@
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Check In App Guides</p>
+                                    <p class="card-title">Check-in Into The Class</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -147,31 +138,7 @@
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Scheduling Classes</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            
-            <!-- Genral Admin Topics -->
-            <section id="hq-admin-guide">
-                <div class="container">
-                    <div class="section-header">
-                        <p class="section-title">HQ Admin Guides</p>
-                        <p class="section-desc">We got you covered with all your problems.</p>
-                        <p class="section-desc">Please navigate through the below links to get your answers.</p>
-                    </div>
-                    <div class="section-body">
-                        <div class="card-box">
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">HQ Admin Guides</p>
+                                    <p class="card-title">Calender Applications</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -180,7 +147,7 @@
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Reporting</p>
+                                    <p class="card-title">Finding Location</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -189,43 +156,7 @@
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Updating a facility profile</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Check In App Guides</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Scheduling Classes</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Settings</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Users</p>
+                                    <p class="card-title">Customer Support</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -293,6 +224,17 @@
 
     <script src="./lib/jquery/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <script>
+        $(window).scroll(function () {
+            var $this = $(this),
+                $head = $('#header');
+            if ($this.scrollTop() > 120) {
+                $head.addClass('fixed_header');
+            } else {
+                $head.removeClass('fixed_header');
+            }
+        });
+    </script>
 </body>
 
 </html>
