--- a/post-detail.html
+++ b/post-detail.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
 
         <!-- header -->
-        <header id="header">
+        <header id="header" class="fixed_header">
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
