--- a/post-detail.html
+++ b/post-detail.html
@@ -88,7 +88,7 @@
                     </button>
                     <div id="aside">
                         <div class="aside-outer-box">
-                            <img src="./images/aside-logo.png" alt="" class="brand-img">
+                            <img src="./images/logo.png" alt="" class="brand-img">
                             <p class="aside-title">Backend Facility Guides</p>
                             <div class="aside-inner-box">
                                 <ul class="aside-nav">
