--- a/frontend-user-guides.html
+++ b/frontend-user-guides.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>HQ Admin Guide | Dubai Fitness Challenge</title>
+    <title>Frontend User Guides | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -73,7 +73,9 @@
                 <div class="container">
                     <div class="hero-content-box">
                         <div class="hero-title-box">
-                            <h3 class="hero-title">HQ Admin User guide</h3>
+                            <h3 class="hero-title">Find your
+                                30X30
+                                Challenge</h3>
                         </div>
                         <div class="hero-img-box">
                             <div class="hero-img-box">
@@ -81,79 +83,97 @@
                             </div>
                         </div>
                     </div>
+                    <p class="hero-desc">Want to get started with fitness challenge, but don’t know where to begin? The articles will help you start your booking activities from sign up to check-in to class</p>
                 </div>
             </section>
 
-            <!-- HQ Admin Topics -->
-            <section id="hq-admin-guide">
+            <!-- User Manual Topics -->
+            <section id="user-manual-topics">
                 <div class="container">
                     <div class="section-header">
-                        <p class="section-title">HQ Admin Guides</p>
-                        <p class="section-desc">We got you covered with all your problems.</p>
-                        <p class="section-desc">Please navigate through the below links to get your answers.</p>
+                        <p class="section-title">Have Questions?</p>
+                        <p class="section-desc">We got you covered with all your problems. Please navigate through the below links to get your anser our Live chat with our Help center representative.</p>
                     </div>
                     <div class="section-body">
                         <div class="card-box">
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">HQ Admin Guides</p>
+                                    <p class="card-title">Getting Started</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Reporting</p>
+                                    <p class="card-title">Finding a class or activity</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Updating a facility profile</p>
+                                    <p class="card-title">Booking a class</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Check In App Guides</p>
+                                    <p class="card-title">View your booking Calender</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Scheduling Classes</p>
+                                    <p class="card-title">Cancelling a booking</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Settings</p>
+                                    <p class="card-title">Booking a class for a friend</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Users</p>
+                                    <p class="card-title">Booking a class for friends/family</p>
+                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin?</p>
+                                </div>
+                            </a>
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                                <div class="card-header">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Attending a class</p>
+                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                </div>
+                            </a>
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                                <div class="card-header">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Accessing your QR code</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -161,11 +181,19 @@
                     </div>
                 </div>
             </section>
+
+            <!-- live-chat -->
+            <section id="live-chat">
+                <div class="container">
+                    <p class="live-chat-title">Looking for help with Dubai Fitness Challenge application? Check out our Help Center.</p>
+                    <button class="btn-live-chat">Live Chat with us</button>
+                </div>
+            </section>
         </main>
 
         <!-- footer -->
         <footer id="footer">
-            <div class="container">
+            <div class="container" style="border-top: 1px solid #ffffff;padding-top: 77px;">
                 <div class="info">
                     <img src="./images/footer-logo.png" alt="">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
