--- a/post-detail.html
+++ b/post-detail.html
@@ -53,19 +53,7 @@
                 <div class="external-links-box">
                     <ul class="site-list">
                         <li class="site-item">
-                            <a href="#" class="site-link">
-                                <img src="./images/icon/site-icon-01.png" alt="">
-                            </a>
-                        </li>
-                        <li class="site-item">
-                            <a href="#" class="site-link">
-                                <img src="./images/icon/site-icon-02.png" alt="">
-                            </a>
-                        </li>
-                        <li class="site-item">
-                            <a href="#" class="site-link">
-                                <img src="./images/icon/site-icon-03.png" alt="">
-                            </a>
+                            <a href="./frontend-user-guides-post-detail.html#section4" class="site-link book-class">Book a class</a>
                         </li>
                         <li class="site-item btn-toggle">
                             <a href="#" class="site-link">
