--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>User Guide | Dubai Fitness Challenge</title>
+    <title>Frontend User Guides | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -94,57 +94,84 @@
                     </div>
                     <div class="section-body">
                         <div class="card-box">
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Getting Started</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Booking Activity</p>
+                                    <p class="card-title">Finding a class or activity</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Check-in Into The Class</p>
+                                    <p class="card-title">Booking a class</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Calender Applications</p>
+                                    <p class="card-title">View your booking Calender</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Finding Location</p>
+                                    <p class="card-title">Cancelling a booking</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Customer Support</p>
+                                    <p class="card-title">Booking a class for a friend</p>
+                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                </div>
+                            </a>
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                                <div class="card-header">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Booking a class for friends/family</p>
+                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin?</p>
+                                </div>
+                            </a>
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                                <div class="card-header">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Attending a class</p>
+                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                </div>
+                            </a>
+                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                                <div class="card-header">
+                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Accessing your QR code</p>
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
@@ -152,11 +179,19 @@
                     </div>
                 </div>
             </section>
+
+            <!-- live-chat -->
+            <section id="live-chat">
+                <div class="container">
+                    <p class="live-chat-title">Looking for help with Dubai Fitness Challenge application? Check out our Help Center.</p>
+                    <button class="btn-live-chat">Live Chat with us</button>
+                </div>
+            </section>
         </main>
 
         <!-- footer -->
         <footer id="footer">
-            <div class="container">
+            <div class="container" style="border-top: 1px solid #ffffff;padding-top: 77px;">
                 <div class="info">
                     <img src="./images/footer-logo.png" alt="">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
