some new updates

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="section-body">
                         <div class="card-box">
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section1" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -103,7 +103,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section3" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -112,7 +112,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section4" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -121,7 +121,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section5" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -130,7 +130,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section6" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -139,7 +139,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section7" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -148,7 +148,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section8" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -157,7 +157,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin?</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section9" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
@@ -166,7 +166,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./frontend-user-guides-post-detail.html" class="card">
+                            <a href="./frontend-user-guides-post-detail.html#section2" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-03.png" class="card-img" alt="">
                                 </div>
