--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div id="content">
-                        <button class="btn-back">
+                        <button class="btn-back" onclick="history.back()">
                             <img src="./images/icon/arrow-left.png" alt="">
                         </button>
                         <h3 class="title">Frontend User Guides</h3>
@@ -165,7 +165,6 @@
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Overview</p>
-                                <p class="subsection-desc" style="font-style: italic;">(I thought we could use all the icons here with some text explaining what they do, therefore the guide can tailor more towards mobile & desktop users together)</p>
                                 <p class="subsection-desc">Profile Icon - Access your profile information here</p>
                                 <p class="subsection-desc">QR Icon - Click to view your unique QR code</p>
                                 <p class="subsection-desc">Fitness provider search Icon - You can search for Fitness Villages and Facilities here</p>
@@ -312,8 +311,8 @@
                         <li>
                             <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
                         </li>
-                        <li>
-                            <a href="#">Contact Us</a>
+                        <li class="">
+                            <a href="https://www.dubaifitnesschallenge.com/contact-us/" target="_blank">Contact Us</a>
                         </li>
                     </ul>
                 </div>
