--- a/hq-admin.html
+++ b/hq-admin.html
@@ -180,7 +180,7 @@
                             <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
                         </li>
                         <li class="">
-                            <a href="#">Contact Us</a>
+                            <a href="https://www.dubaifitnesschallenge.com/contact-us/" target="_blank">Contact Us</a>
                         </li>
                     </ul>
                 </div>
