--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <section id="live-chat">
                 <div class="container">
                     <p class="live-chat-title">Looking for help with Dubai Fitness Challenge application? Check out our Help Center.</p>
-                    <button class="btn-live-chat">Live Chat with us</button>
+                    <a href="https://www.dubaifitnesschallenge.com/contact-us/" class="btn-live-chat" target="_blank">Contact us</a>
                 </div>
             </section>
         </main>
@@ -206,7 +206,7 @@
                             <a href="https://www.dubaifitnesschallenge.com/about-us/" target="_blank">About Us</a>
                         </li>
                         <li class="">
-                            <a href="#">Contact Us</a>
+                            <a href="https://www.dubaifitnesschallenge.com/contact-us/" target="_blank">Contact Us</a>
                         </li>
                     </ul>
                 </div>
