--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Social Platforms</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link">Company 
                                 <img src="./images/icon/arrow-down.png" alt="">
                             </a>
@@ -47,7 +47,7 @@
                                     <a href="./hq-admin.html" class="sub-menu-link">HQ Admin User guide</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
                 <div class="external-links-box">
@@ -218,6 +218,9 @@
                         </li>
                         <li class="">
                             <a href="#">Activity Listings</a>
+                        </li>
+                        <li class="">
+                            <a href="./facility-admin.html">Facility Admin User Guide</a>
                         </li>
                     </ul>
                 </div>
