--- a/post-detail.html
+++ b/post-detail.html
@@ -33,7 +33,7 @@
                             <a href="https://www.dubaifitnesschallenge.com/privacy-policy/" class="nav-link" target="_blank">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Social Platforms</a>
+                            <a href="./index.html#social-media-link" class="nav-link">Follow us</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link">Company 
