--- a/post-detail.html
+++ b/post-detail.html
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div id="content">
-                        <button class="btn-back">
+                        <button class="btn-back" onclick="history.back()">
                             <img src="./images/icon/arrow-left.png" alt="">
                         </button>
                         <h3 class="title">Getting Started</h3>
