--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -158,10 +158,12 @@
                                 <p class="subsection-desc">To complete your registration you will need to confirm your email address, check your email mailbox and click the link inside the email to do this.</p>
                                 <p class="subsection-desc">Please check your junk/spam folder if you did not receive this email.</p>
                                 <p class="subsection-desc">You can also sign up using Google or Facebook sign in.</p>
+                                <img src="./images/post-detail/Signing-up.gif" class="section-img" alt="">
                             </div>
                             <div id="sub-section2" class="sub-section">
                                 <p class="subsection-title">Forgotten Password</p>
                                 <p class="subsection-desc">If you have forgotten your password you can reset it through the ‘Forgotten Password’ link. A reset email will be sent to the email address you signed up with. Please check junk/spam folders if you do not receive this email.</p>
+                                <img src="./images/post-detail/Forgotten-Password.gif" class="section-img" alt="">
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Overview</p>
