--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -18,7 +18,7 @@
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
-                        <img src="./images/logo.png" alt="" class="brand-img">
+                        <img src="./images/logo.png" alt="" class="brand-img" width="93px">
                     </a>
                 </div>
                 <nav class="navbar">
@@ -72,7 +72,8 @@
             <section id="post-detail">
                 <div class="container">
                     <button class="btn-sidebar-toggle">
-                        <p> . . . </p>
+                        <!-- <p> . . . </p> -->
+                        <img src="./images/icon/Hamburger-icon.png" width="27px" alt="" title="toggle side menu">
                     </button>
                     <div id="aside">
                         <div class="aside-outer-box">
@@ -147,7 +148,7 @@
                     </div>
                     <div id="content">
                         <button class="btn-back" onclick="history.back()">
-                            <img src="./images/icon/arrow-left.png" alt="">
+                            <img src="./images/icon/arrow-left.png" width="26px" alt="" title="Go Back">
                         </button>
                         <h3 class="title">Frontend User Guides</h3>
                         <div id="section1">
@@ -158,20 +159,17 @@
                                 <p class="subsection-desc">To complete your registration you will need to confirm your email address, check your email mailbox and click the link inside the email to do this.</p>
                                 <p class="subsection-desc">Please check your junk/spam folder if you did not receive this email.</p>
                                 <p class="subsection-desc">You can also sign up using Google or Facebook sign in.</p>
-                                <img src="./images/post-detail/Signing-up.gif" class="section-img" alt="">
+                                <img src="./images/post-detail/Signing-up.gif" width="677px" class="section-img" alt="">
                             </div>
                             <div id="sub-section2" class="sub-section">
                                 <p class="subsection-title">Forgotten Password</p>
                                 <p class="subsection-desc">If you have forgotten your password you can reset it through the ‘Forgotten Password’ link. A reset email will be sent to the email address you signed up with. Please check junk/spam folders if you do not receive this email.</p>
-                                <img src="./images/post-detail/Forgotten-Password.gif" class="section-img" alt="">
+                                <img src="./images/post-detail/Forgotten-Password.gif" width="677px" class="section-img" alt="">
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Overview</p>
-                                <p class="subsection-desc">Profile Icon - Access your profile information here</p>
-                                <p class="subsection-desc">QR Icon - Click to view your unique QR code</p>
-                                <p class="subsection-desc">Fitness provider search Icon - You can search for Fitness Villages and Facilities here</p>
-                                <p class="subsection-desc">Activity search Icon - Search here for a specific activity</p>
-                                <p class="subsection-desc">Calendar Icon - Here you can view and manage all your upcoming bookings.</p>
+                                <p class="subsection-desc">You can mainly find all of the main options to navigate though right at the top or in hamburger menu at upper right corner (if you’re using mobile device). You’ll have options to choose/search from your unique QR code - Profile Access - General Search Bar - Fitness Village Facility - Activity Listing with Filters and Calendar to manage your bookings.</p>
+                                <img src="./images/post-detail/Overview.png" width="677px" class="section-img" alt="">
                             </div>
                         </div>
                         <div id="section2">
@@ -301,7 +299,7 @@
         <footer id="footer" style="box-shadow: 0px -7px 40px rgba(0, 0, 0, 0.1);">
             <div class="container">
                 <div class="info">
-                    <img src="./images/footer-logo.png" alt="">
+                    <img src="./images/footer-logo.png" alt="" width="162px">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
                 </div>
                 <div class="links">
