--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -168,7 +168,7 @@
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Overview</p>
-                                <p class="subsection-desc">You can mainly find all of the main options to navigate though right at the top or in hamburger menu at upper right corner (if you’re using mobile device). You’ll have options to choose/search from your unique QR code - Profile Access - General Search Bar - Fitness Village Facility - Activity Listing with Filters and Calendar to manage your bookings.</p>
+                                <p class="subsection-desc">Welcome to the Dubai Fitness Challenge Booking Platform! To find your way around, familiarise yourself with our navigation menu. If you're using mobile you can use the hamburger menu in the top right corner of the screen to get around.</p>
                                 <img src="./images/post-detail/Overview.png" width="677px" class="section-img" alt="">
                             </div>
                         </div>
